gcc/testsuite/g++.dg/cpp0x/pr71665-1.C
// PR c++/71665
// { dg-do compile { target c++11 } }

class A 
{
  int f ();
  enum { a = f }; // { dg-error "enumerator" }
};
